# cppcore

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
.cmake/presets/: common.json  linux.json  windows.json
Src/: CMakeLists.txt
Src/001_Encoder/ssdeep/: filedata.cpp
Test/: CMakeLists.txt
Test/CommonTest/: CMakeLists.txt
Test/DummyDynamicLibrary/: CMakeLists.txt
Test/DummyProcess/: CMakeLists.txt
Test/EncoderTest/: CMakeLists.txt
Test/FormatterTest/: CMakeLists.txt
Test/ServerTest/: CMakeLists.txt
Test/StringTest/: CMakeLists.txt
Test/SystemTest/: CMakeLists.txt
